--- a/App/AndRemote/app/src/main/AndroidManifest.xml
+++ b/App/AndRemote/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:parentActivityName="com.utopik.andremote.app.TouchpadActivity"
+            android:name="com.utopik.andremote.app.SettingsActivity"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
