--- a/App/AndRemote/app/src/main/AndroidManifest.xml
+++ b/App/AndRemote/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.utopik.andremote.app" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -18,9 +19,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:parentActivityName="com.utopik.andremote.app.TouchpadActivity"
             android:name="com.utopik.andremote.app.SettingsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:parentActivityName="com.utopik.andremote.app.TouchpadActivity" >
         </activity>
     </application>
 
