--- a/App/AndRemote/app/src/main/AndroidManifest.xml
+++ b/App/AndRemote/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:screenOrientation="portrait"
             android:name="com.utopik.andremote.app.TouchpadActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -21,6 +22,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name="com.utopik.andremote.app.SettingsActivity"
             android:label="@string/app_name"
             android:parentActivityName="com.utopik.andremote.app.TouchpadActivity" >
